correion recupero de cuenta, pide ahora dni y correo, se puede registrar con mismo correo

--- a/src/templates/registration/password_reset_request.html
+++ b/src/templates/registration/password_reset_request.html
@@ -136,6 +136,19 @@
                     placeholder="Ingresa tu DNI"
                 >
             </div>
+            
+            <div class="form-group">
+                <label for="email">
+                    📧 Confirmar Correo Electrónico:
+                </label>
+                <input 
+                    type="email" 
+                    name="email" 
+                    id="email"
+                    required
+                    placeholder="Ingresa tu correo registrado"
+                >
+            </div>
 
             <button type="submit" class="btn-reset">
                 📧 Enviar Enlace de Recuperación
