--- a/src/templates/inscripciones/formulario_inscripcion.html
+++ b/src/templates/inscripciones/formulario_inscripcion.html
@@ -435,7 +435,7 @@
                             <option value="tutor_legal" ${isSelected('tutor_legal')}>Tutor Legal</option>
                             <option value="abuelo" ${isSelected('abuelo')}>Abuelo/a</option>
                             <option value="hermano" ${isSelected('hermano')}>Hermano/a</option>
-                            <option value="otro" ${isSelected('otro')}>Otro</option>
+                            <option value="vecino" ${isSelected('vecino')}>Vecino/a</option>
                         </select>
                     </div>
                 </div>
