--- a/src/templates/usuario/agregar_tutor.html
+++ b/src/templates/usuario/agregar_tutor.html
@@ -161,7 +161,7 @@
                     <option value="tutor_legal">Tutor Legal</option>
                     <option value="abuelo">Abuelo/a</option>
                     <option value="hermano">Hermano/a Mayor</option>
-                    <option value="otro">Otro</option>
+                    <option value="vecino">Vecino/a</option>
                 </select>
             </div>
         </div>
